new submenu Algoritmos

--- a/html/index.html
+++ b/html/index.html
@@ -32,6 +32,8 @@
       <ul class="submenu">
         <li><a href="https://www.devmedia.com.br/certificado/tecnologia/javascript/guilherme-serafini-eco"
             target="_blank" rel="noopener noreferrer">Javascript</a></li>
+        <li><a href="https://www.devmedia.com.br/certificado/tecnologia/algoritmo/guilherme-serafini-eco"
+            target="_blank" rel="noopener noreferrer">Algoritmos</a></li>
         <li><a href="https://www.devmedia.com.br/certificado/tecnologia/programacao/guilherme-serafini-eco"
             target="_blank" rel="noopener noreferrer">Outros</a></li>
       </ul>
@@ -39,7 +41,8 @@
     <li>
       <div class="link"><i class="fa fa-paint-brush"></i>Certificados front-end<i class="fa fa-chevron-down"></i></div>
       <ul class="submenu">
-        <li><a href="https://www.devmedia.com.br/certificado/tecnologia/html/guilherme-serafini-eco" target="_blank" rel="noopener noreferrer">HTML</a></li>
+        <li><a href="https://www.devmedia.com.br/certificado/tecnologia/html/guilherme-serafini-eco" target="_blank"
+            rel="noopener noreferrer">HTML</a></li>
         <li><a href="https://www.devmedia.com.br/certificado/tecnologia/css/guilherme-serafini-eco" target="_blank"
             rel="noopener noreferrer">CSS</a></li>
       </ul>
