php certification included

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <h1><a href="index.html" target="_blank" rel="noopener noreferrer">Menu - Home</a></h1>
+  <h1><a href="index.html" target="_self" rel="noopener noreferrer">Menu - Home</a></h1>
   <!-- Contenedor -->
   <ul id="accordion" class="accordion">
     <li class="default open">
@@ -32,6 +32,8 @@
       <ul class="submenu">
         <li><a href="https://www.devmedia.com.br/certificado/tecnologia/javascript/guilherme-serafini-eco"
             target="_blank" rel="noopener noreferrer">Javascript</a></li>
+        <li><a href="https://www.devmedia.com.br/certificado/tecnologia/php/guilherme-serafini-eco"
+            target="_blank" rel="noopener noreferrer">PHP</a></li>
         <li><a href="https://www.devmedia.com.br/certificado/tecnologia/algoritmo/guilherme-serafini-eco"
             target="_blank" rel="noopener noreferrer">Algoritmos</a></li>
         <li><a href="https://www.devmedia.com.br/certificado/tecnologia/programacao/guilherme-serafini-eco"
